added desktop checkout process

--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -9,6 +9,7 @@ $black: #000;
 $credits-red: #D9232B;
 $white: #fff;
 $red: #e74c3c;
+$red-light: #F08080;
 $orange: #F2BB7C;
 $orange-light: #FFD9AD;
 $orange-flat: #e67e22;
