--- a/app/views/static_pages/redeem.html.erb
+++ b/app/views/static_pages/redeem.html.erb
@@ -7,6 +7,13 @@
 </div> <!--/.interior-hero -->
 
 <div class='interior-body'>
+  <div class="donations">
+    <div class="donations__wrapper">
+      <h1 class="donations__caption">Get in the spirit of giving and support PAWS for the holidays!</h1>
+      <a class="donations__link donations__link--holiday" href="/donate">Donate Credits</a>
+    </div>
+  </div>
+
   <section class="card-container">
     <p class="interior-body__caption">Choose credits for cashout</p>
     <%= link_to redeem_credits_path(credits: 1000) do %>
