--- a/app/assets/stylesheets/cards.css.scss
+++ b/app/assets/stylesheets/cards.css.scss
@@ -9,6 +9,20 @@
     }
   }
 }
+// .card-container--donations {
+//   .card-tout {
+//     position: relative;
+//     transform: none;
+//   }
+//   .card-inner {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     background-color: rgba(97, 95, 95, 0.34);
+//   }
+// }
 .card-tout {
   height: 200px;
   width: 200px;
