added google tracking events for ios home page load and users viewing the site in browser

--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -188,7 +188,7 @@
                 <span class="modal__link js-modal__link">Proceed to Temporary Site</span>
             </div>
             <div class="mobile--overlay">
-                <a href="/" class="overlay__opt-out">Preview in Browser</a>
+                <a href="/" class="overlay__opt-out ga-preview-event">Preview in Browser</a>
                 <a href="/" class="overlay__back-to-dash">Return to Dashboard</a>
                 <div class="overlay__content">
                     <img class="overlay__logo" src="/assets/logo-144.png">
