--- a/app/views/games/leaderboard.html.erb
+++ b/app/views/games/leaderboard.html.erb
@@ -50,5 +50,5 @@
 
 <% if Rails.env.production? %>
   <!-- GA Tracking Events -->
-  <%= render 'layouts/tracking_events' %>
+  <%= render 'tracking_events/tracking_leaderboard' %>
 <% end %>
