fixed iOS home overlay to set cookie only on button click and fixed GA tracking event to check for returning user cookie to fire

--- a/app/views/tracking_events/_tracking_preview.html.erb
+++ b/app/views/tracking_events/_tracking_preview.html.erb
@@ -31,7 +31,7 @@ var analytics = {
 };
 
 $(document).ready(function(){
-    if (mobileCheck.iOS()) {
+    if (mobileCheck.iOS() && Cookies.get('user') !== "returning") {
         console.log('do analytics');
         analyticsEvent("iOS Home Page Load", "Open", analytics.conf.labelName, 0, true);
         analytics.init();
