added email address to /users admin page

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <%= link_to user.name, user %> | Credits on hand : <%= user.credits ||=0 %> | Credits Deposited: <%= user.user_entries.size ||= 0 %>
+  <%= link_to user.name, user %> | Email: <%= user.email %> | Credits on hand : <%= user.credits ||=0 %> | Credits Deposited: <%= user.user_entries.size ||= 0 %>
   <% if current_user.admin? && !current_user?(user) %>
 
     <% if false %><%= link_to "delete", user, method: :delete,
