--- a/app/assets/stylesheets/interior_pages.css.scss
+++ b/app/assets/stylesheets/interior_pages.css.scss
@@ -255,3 +255,21 @@
     }
   }
 }
+
+// ********************** /users *********************
+.export-btn {
+  background-color: $orange;
+  color: $white;
+  padding: 10px 20px;
+  border-radius: 2px;
+  @include transition();
+
+  &:hover {
+    background-color: $orange-flat;
+    text-decoration: none;
+    color: $white;
+  }
+}
+.users.users__info-list {
+  margin-top: 20px;
+}
