--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,10 +3,10 @@
 
 <!-- <a href="/users.csv">Export CSV</a> -->
 <!-- <a href="/users.xls">Export XLS</a> -->
-<%= link_to "Export CSV", users_path(format: :csv) %> |
-<%= link_to "Export XLS", users_path(format: :xls) %>
+<%= link_to "Export CSV", users_path(format: :csv), class: "export-btn" %>
+<%= link_to "Export XLS", users_path(format: :xls), class: "export-btn" %>
 
 
-<ul class="users">
+<ul class="users users__info-list">
   <%= render @users %>
 </ul>
