--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 
       <!-- start google analytics -->
       <script>
-        var strUserId = "<%= current_user.id %>";
+        // var strUserId = "<%= current_user.id %>";
 
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -30,13 +30,15 @@
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
         ga('create', 'UA-58032053-2', 'auto');
-        ga('set', 'userId', strUserId); // Set the user ID using signed-in user_id.
+        // ga('set', 'userId', strUserId);
         ga('send', 'pageview');
 
       </script>
       <!-- end google analytics -->
     <% end %>
   <%= yield(:game_javascript) %>
+
+  <%= current_user.id %>
   </head>
   <body class="<%= yield (:body_class) %>">
     <div class="desktop-wrapper">
