--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -104,7 +104,7 @@
 
             <!-- start google analytics -->
             <script>
-                // var strUserId = "<%= current_user.id %>";
+                // var strUserId = "<%# current_user.id %>";
 
                 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
