--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <link href='http://fonts.googleapis.com/css?family=Capriola' rel='stylesheet' type='text/css'>
     <%= csrf_meta_tags %>
     <%= render 'layouts/shim' %>
+
     <% if Rails.env.production? %>
       <script type="text/javascript">
         !function(a,b,c,d,e,f,g,h){a.RaygunObject=e,a[e]=a[e]||function(){
@@ -22,13 +23,17 @@
 
       <!-- start google analytics -->
       <script>
+        <% if current_user %>
+            var strUserId = "<%= current_user.id %>";
+        <% end %>
+
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
         ga('create', 'UA-58032053-2', 'auto');
-        // ga('set', 'userId', strUserId);
+        ga('set', 'userId', strUserId);
         ga('send', 'pageview');
 
       </script>
