--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,10 @@
 
       <!-- start google analytics -->
       <script>
+        var strUserId = null;
+
         <% if current_user %>
-            var strUserId = "<%= current_user.id %>";
+          strUserId = "<%= current_user.id %>";
         <% end %>
 
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -33,9 +35,7 @@
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
         ga('create', 'UA-58032053-2', 'auto');
-        if (strUserId) {
-          ga('set', 'userId', strUserId);
-        };
+        if (strUserId) { ga('set', 'userId', strUserId); };
         ga('send', 'pageview');
 
       </script>
