--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -104,8 +104,10 @@
 
             <!-- start google analytics -->
             <script>
+                var strUserId = null;
+
                 <% if current_user %>
-                    var strUserId = "<%= current_user.id %>";
+                    strUserId = "<%= current_user.id %>";
                 <% end %>
 
                 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -114,9 +116,7 @@
                 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
                 ga('create', 'UA-58032053-2', 'auto');
-                if (strUserId) {
-                  ga('set', 'userId', strUserId);
-                };
+                if (strUserId) { ga('set', 'userId', strUserId); };
                 ga('send', 'pageview');
 
             </script>
