--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,8 @@
       <!-- start google analytics -->
       <script>
         var strUserId = null;
-
         <% if current_user %>
-          strUserId = "<%= current_user.id %>";
+        strUserId = "<%= current_user.id %>";
         <% end %>
 
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -34,8 +33,9 @@
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-58032053-2', 'auto');
-        if (strUserId) { ga('set', 'userId', strUserId); };
+        ga('create', 'UA-58032053-2', {'userId': strUserId}); //reset third argument to 'auto'
+        ga('set', 'dimension1', strUserId);
+        // if (strUserId) { ga('set', 'userId', strUserId); };
         ga('send', 'pageview');
 
       </script>
