--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -115,8 +115,9 @@
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-                ga('create', 'UA-58032053-2', 'auto');
-                if (strUserId) { ga('set', 'userId', strUserId); };
+                ga('create', 'UA-58032053-2', {'userId': strUserId}); //reset third argument to 'auto'
+                ga('set', 'dimension1', strUserId);
+                // if (strUserId) { ga('set', 'userId', strUserId); };
                 ga('send', 'pageview');
 
             </script>
