added score to nav dropdown and made home page load a non-interaction link

--- a/app/views/tracking_events/_tracking_leaderboard.html.erb
+++ b/app/views/tracking_events/_tracking_leaderboard.html.erb
@@ -29,7 +29,7 @@ var analytics = {
 $(document).ready(function(){
     var lbname = "Leaderboard Activity";
     console.log('Leaderboard page loaded');
-    analyticsEvent("Leaderboard Page Load", "Open", lbname, 0, false);
+    analyticsEvent("Leaderboard Page Load", "Open", lbname, 0, true);
     analytics.init();
 });
 </script>
