--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
             </span>
             <ul class="nav-dropdown__list">
               <li class="nav-dropdown__item"><%= link_to 'Games', games_path %></li>
-              <li class="nav-dropdown__item"><%= link_to 'Redeem Credits', redeem_path %></li>
+              <li class="nav-dropdown__item"><%= link_to redeem_path do %>Redeem Credits <span class="nav-dropdown__credits"><%= current_user.credits %></span><% end %></li>
               <li class="nav-dropdown__item"><%= link_to refer_path do %>Invite Friends <span class="nav-dropdown__credits">+25</span> <% end %></li>
               <li class="nav-dropdown__item"><%= link_to surveys_path do %>Take Survey <span class="nav-dropdown__credits">+100</span><% end %></li>
               <li class="nav-dropdown__item"><a href="mailto:support@getluckee.com" target="_top">Contact Us</a></li>
