added tutorial for 2048

--- a/app/views/games/index_mobile.html.erb
+++ b/app/views/games/index_mobile.html.erb
@@ -1,7 +1,7 @@
   <div class='game-list-container'>
     <% @games.each do | g | %>
       <%= link_to game_path(g) do %>
-        <div class="game-wrapper">
+        <div class="game-wrapper game--<%= g.slug %>">
           <% if g.slug == "flappy-pilot" ||  g.slug == "fall-down" || g.slug == "traffic" %>
             <img class="game__leaderboard" src="/assets/leaderboard_button.png">
           <% end %>
@@ -10,3 +10,15 @@
       <% end %>
     <% end %>
   </div>
+
+<script>
+  $(function() {
+    if (mobileCheck.any()) {
+      $('.game--fall-down').click(function(){
+        var url = "http://localhost:3000/";
+        window.location = url + "2048_tutorial";
+        return false;
+      });
+    }
+  });
+</script>
