--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -4,6 +4,7 @@
 @import "variables";
 @import "leaderboard";
 @import "confirmation";
+@import "superslides";
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
