--- a/app/views/static_pages/twentyfortyeight_tut.html.erb
+++ b/app/views/static_pages/twentyfortyeight_tut.html.erb
@@ -3,7 +3,8 @@
     <li>
       <img src="/assets/2048-backdrop.jpg" alt="">
       <div class="container">
-        <h1 class="slides__title">Swipe to move all tiles</h1>
+        <h1 class="slides__title">Swiping moves all tiles in that direction</h1>
+        <p class="slides__sm-text">(use arrow keys on desktop)</p>
         <div class="slides__tut-img fingerpoint" style="background-image: url(/assets/2048-gameboard-1.png);">
         </div>
       </div>
@@ -11,16 +12,16 @@
     <li>
       <img src="/assets/2048-backdrop.jpg" alt="">
       <div class="container">
-        <h1 class="slides__title">When two tiles with the same number touch, they merge into one!</h1>
+        <h1 class="slides__title">Slide identical tiles together to combine them</h1>
         <div class="slides__tut-img" style="background-image: url(/assets/2048-gameboard-2.png);">
         </div>
-        <h1 class="slides__title">It's over when the board fills up...</h1>
+        <!-- <h1 class="slides__title">Avoid filling all spaces on the board...</h1> -->
       </div>
     </li>
     <li>
       <img src="/assets/2048-backdrop.jpg" alt="">
       <div class="container">
-        <h1 class="slides__title">Join the numbers and get to the 2048 tile</h1>
+        <h1 class="slides__title">Continue swiping and combining tiles until you have no more moves</h1>
         <div class="slides__tut-img" style="background-image: url(/assets/2048-gameboard-3.png);">
         </div>
         <a href="/games/14" class="slides__link">Play Now</a>
