--- a/app/views/games/index_mobile.html.erb
+++ b/app/views/games/index_mobile.html.erb
@@ -1,3 +1,5 @@
+<% content_for :body_class, "mobile-games-page" %>
+
   <div class='game-list-container'>
     <% @games.each do | g | %>
       <%= link_to game_path(g) do %>
