--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -5,6 +5,7 @@
 @import "leaderboard";
 @import "confirmation";
 @import "superslides";
+@import "intermediates";
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
