--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,3 +8,11 @@
 <ul class="users users__info-list">
   <%= render @users %>
 </ul>
+
+<h1>All Time Stats</h1>
+
+<p>Total Users: <span><%= User.count %></span></p>
+
+<p>Total Credits: <span><%= @credits %></span></p>
+
+
