--- a/app/assets/stylesheets/interior_pages.css.scss
+++ b/app/assets/stylesheets/interior_pages.css.scss
@@ -1,6 +1,6 @@
 @import "reset";
 // Interior Pages
-.games-page {
+.desktop-games-page {
   background-image: url(star_background.jpg);
   background-size: 70%;
 }
