--- a/app/views/games/index_mobile.html.erb
+++ b/app/views/games/index_mobile.html.erb
@@ -1,4 +1,4 @@
-<% content_for :body_class, "mobile-games-page" %>
+<% content_for :body_class, "mobile-games-page games-page" %>
 
   <div class='game-list-container'>
     <% @games.each do | g | %>
