made styling changes to 2048 home page | added sticky navigation to site and top paddign to accomodate for the spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,6 +6,7 @@
 @import "cards";
 @import "leaderboard";
 @import "intermediates";
+@import "reset";
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
