--- a/app/views/games/twentyfortyeight_home.erb
+++ b/app/views/games/twentyfortyeight_home.erb
@@ -5,12 +5,12 @@
 
   <div class="game-page__icon-row">
     <a href="/games" class="game-page__link">
-      <i class="fa fa-home game-page__icon"></i>
+      <img src="/assets/white_home.svg" class="game-page__icon">
       <h2 class="game-page__subtitle">Home</h2>
     </a>
 
     <a href="/leaderboard/<%= @game.name %>" class="game-page__link">
-      <i class="fa fa-list game-page__icon"></i>
+      <img src="/assets/white_leaderboard.svg" class="game-page__icon">
       <h2 class="game-page__subtitle">Leaderboard</h2>
     </a>
   </div>
