--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -15,6 +15,8 @@
         <link href='http://fonts.googleapis.com/css?family=Capriola' rel='stylesheet' type='text/css'>
         <!-- touchSwipe library -->
 
+        <!-- Hide iOS Status Bar -->
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <!-- iOS Load Screen -->
 
         <!-- iPhone SPLASHSCREEN-->
@@ -125,7 +127,7 @@
         <% end %>
         <%= yield(:game_javascript) %>
     </head>
-    <body ondragstart="return false;" ondrop="return false;" class="<%= yield (:body_class) %>">
+    <body ondragstart="return false;" ondrop="return false;" class="<%= yield (:body_class) %> <% if @game && Game.where(slug:['traffic','flappy-pilot','fall-down']).pluck(:id).include?(@game.id) %> mobile-header--hide <% end %>">
         <% if signed_in? %>
         <nav class="nav ssm-nav-visible">
             <div class='side-nav-top'>
@@ -211,7 +213,8 @@
                 </div>
             </div>
             <% if signed_in? %>
-                <div class='mobile-header' <% if @game && Game.where(slug:['traffic','flappy-pilot','fall-down']).pluck(:id).include?(@game.id) %> style='display:none;'<% end %>>
+                <div class="bottom-navigation bottom-navigation--mobile js-bottom-navigation"></div>
+                <div class="mobile-header js-mobile-header">
                     <% if @show_back_button %>
                         <% if @back_button_action %>
                             <span class='<%= @back_button_action %>'style='display:none'><i class="fa fa-chevron-left back-button"></i></span>
@@ -252,7 +255,9 @@
                     </div>
                 </div>
             <% else %>
+            <div class="logo-wrapper">
                 <img src="/assets/homescreen-logo.png" class="top-title">
+            </div>
             <% end %>
           <% flash.each do |key, value| %>
             <div class="alert alert-<%= key %>"><%= value %></div>
