--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,15 +1,22 @@
 <% provide(:title, "Forgot password") %>
 <% content_for :body_class, "page-background" %>
+<div class='mobile-header'>
+    <%= link_to root_path do %>
+    <i class="fa fa-chevron-left back-button"></i>
+    <% end %>
 
-<h1>Forgot password</h1>
+    <h2>Luckee</h2>
+</div>
+
+<h1 class="intro-header intro-header--mobile">Forgot password</h1>
 
 <div class="row">
   <div class="sign-in">
     <%= form_for(:password_reset, url: password_resets_path) do |f| %>
       <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+      <%= f.email_field :email, class: 'session__input' %>
 
-      <%= f.submit "Submit", class: "btn btn-primary" %>
+      <%= f.submit "Submit", class: "form-submit" %>
     <% end %>
   </div>
 </div>
