removed earn credits tout from black hole

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -890,6 +890,13 @@ p {
         }
     }
 }
+.game--black-hole {
+    &.game-wrapper {
+        &::after {
+            display: none;
+        }
+    }
+}
 .game-container{
     min-height:800px;
     background:#000;
