--- a/app/assets/stylesheets/cards.css.scss
+++ b/app/assets/stylesheets/cards.css.scss
@@ -1,13 +1,13 @@
 .card-container {
-  background-color: $clouds;
-  padding: 50px 0;
-  a {
-    text-decoration: none;
+    background-color: $clouds;
+    padding: 50px 0;
+    a {
+        text-decoration: none;
 
-    &:hover {
-      text-decoration: none;
+        &:hover {
+            text-decoration: none;
+        }
     }
-  }
 }
 // .card-container--donations {
 //   .card-tout {
@@ -24,51 +24,60 @@
 //   }
 // }
 .card-tout {
-  height: 200px;
-  width: 200px;
-  background-color: $white;
-  border-radius: 4px;
-  display: inline-block;
-  box-shadow: 0px 5px 10px rgba(127, 140, 141,0.5);
-  padding: 20px;
-  margin: 20px;
-  transition: transform .2s ease-in-out;
-  outline: 0;
+    height: 200px;
+    width: 200px;
+    background-color: $white;
+    border-radius: 4px;
+    display: inline-block;
+    box-shadow: 0px 5px 10px rgba(127, 140, 141,0.5);
+    padding: 20px;
+    margin: 20px;
+    transition: transform .2s ease-in-out;
+    outline: 0;
 
-  &:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-  }
+    &:hover {
+        transform: scale(1.1);
+        cursor: pointer;
+    }
 }
 .card-inner {
-  @include vertical-align();
+    @include vertical-align();
 }
 .card__big-title {
-  font-size: 46px;
-  font-weight: 200;
-  color: $black;
-  position: relative;
-  display: inline-block;
+    font-size: 46px;
+    font-weight: 200;
+    color: $black;
+    position: relative;
+    display: inline-block;
 
-  &::before {
-    content: '+';
-    position: absolute;
-    font-size: 20px;
-    left: -15px;
-    top: 12.5px;
-  }
+    &::before {
+        content: '+';
+        position: absolute;
+        font-size: 20px;
+        left: -15px;
+        top: 12.5px;
+    }
 }
 .card__payout-img {
-  width: 100px;
-  margin-bottom: 20px;
-  .venmo-choice & {
-    width: 135px;
-  }
+    width: 100px;
+    margin-bottom: 20px;
+    .venmo-choice & {
+        width: 135px;
+    }
 }
 .card__credits {
-  color: $red;
+    color: $red;
 }
 .card__lower {
-  display: block;
-  font-size: 14px;
+    display: block;
+    font-size: 14px;
+}
+
+
+// Game Cards
+
+.game--black-hole {
+  .credits {
+    visibility: hidden;
+  }
 }
