--- a/app/views/games/_blackhole_m.html.erb
+++ b/app/views/games/_blackhole_m.html.erb
@@ -1,3 +1,5 @@
+<% content_for :body_class, "gameplay-page gameplay-page--blackhole" %>
+
 <div id="gameContainer"></div>
 <div id="orientation"></div>
 
@@ -10,7 +12,7 @@
         <!-- Run the game code -->
 <script>
   document.body.setAttribute("style","-ms-touch-action: none;");
-  
+
 </script>
 
 
