--- a/app/assets/stylesheets/intermediates.css.scss
+++ b/app/assets/stylesheets/intermediates.css.scss
@@ -2,7 +2,7 @@
     background-image: none;
 }
 
-.intermediate--2048 .mobile-container{
+.intermediate--2048 .intermediate__wrap {
     background-color: #faf8ef !important;
     text-align: center;
 }
