--- a/app/views/games/_flappy_pilot_m.html.erb
+++ b/app/views/games/_flappy_pilot_m.html.erb
@@ -1,3 +1,4 @@
+<% content_for :body_class, "gameplay-page gameplay-page--flappy-pilot" %>
 	<!-- The canvas must be inside a div called c2canvasdiv -->
 	<div id="c2canvasdiv">
 
