--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -273,11 +273,11 @@
                         </div>
                         <% end %>
 
-                    <a href="#" class="bottom-nav__item-link">
+                    <%= link_to leaderboards_path do %>
                         <div class="bottom-nav__item bottom-nav__item--leaderboard">
                             <p class="bottom-nav__item-copy"><img class="bottom-nav__img" src="/assets/navbar_4.png">Leaders</p>
                         </div>
-                    </a>
+                    <% end %>
 
                     <a href="#" class="bottom-nav__item-link">
                         <div class="bottom-nav__item">
