--- a/app/views/games/_sorcerer_m.html.erb
+++ b/app/views/games/_sorcerer_m.html.erb
@@ -1,3 +1,5 @@
+<% content_for :body_class, "gameplay-page gameplay-page--sorcerer" %>
+
 <%= stylesheet_link_tag "sorcerer", media: "all",
                                          "data-turbolinks-track" => true %>
 
@@ -5,12 +7,12 @@
 
 
   <div style="position: fixed; background-color: transparent; top: 10%; left: 0px; width: 100%; height: 100%"></div>
-  
+
   <canvas id="canvas" class='ani_hack' width="1024" height="768"> </canvas>
 
   <script type='text/javascript'>
       $(document).ready(function(){
-       
+
        var oMain = new CMain({
           combo_value: 50,  //amount added to the score for each ball exploded in a combo
           extra_score: 100  //amount added to the score when level is completely cleared
@@ -30,7 +32,7 @@
             success:function(data) {
               $("#game_token").val(data.token);
             }
-          }); 
+          });
        });
      });
 
