added status bar back to staging site

--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -16,7 +16,7 @@
         <!-- touchSwipe library -->
 
         <!-- Hide iOS Status Bar -->
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
         <!-- iOS Load Screen -->
 
         <!-- iPhone SPLASHSCREEN-->
