--- a/app/views/games/show_mobile.html.erb
+++ b/app/views/games/show_mobile.html.erb
@@ -12,12 +12,17 @@
     <% when 'flappy-pilot' %>
       <%= render 'flappy_pilot_m' %>  
     <% when 'fall-down' %>
-      <%= render 'fall_down_m' %>                         
+      <%= render 'fall_down_m' %>  
+    <% when 'tap-color' %>
+     <%= render 'tap_color' %>  
+    <% end %>                       
   <% end %>
 </div>
 
+<% if @game.slug != 'tap-color' %>
 <input type="hidden" id="game_token" name="game_token" value="<%= session[:game_token] %>" />
 <input type="hidden" id="credits_earned" name="credits_earned" value=0 />
+<% end %>
 <script type='text/javascript'>
 
 </script>
