email wording and seed fixes

--- a/app/views/user_notifier/send_welcome_email.html.erb
+++ b/app/views/user_notifier/send_welcome_email.html.erb
@@ -1,5 +1,8 @@
-Hi there, I see you just signed up for the Luckee beta, welcome!  We will be adding new games and features in the coming days, and we could really use your feedback.  Please let me know what you like about the site, as well as anything you would like to see added and improved upon. Feel free to email me anytime with feedback and suggestions!<<<br />
-Have fun, and thank you for your support!<br />
+Hi there, I see you just signed up for the Luckee beta, welcome!  Our team will be adding new games and features in the coming days, and we would love to get your feedback.  Once you've had some time to check out the site we would really appreciate if you could let us know what you like, as well as anything you would like to see added and improved upon. <br /> <br />
+
+Feel free to email me any time with feedback or suggestions!<br/> <br />
+
+We hope you enjoy Luckee, and thank you for your support.<br />
 <br />
 -Griff,<br />
 <br />
