--- a/app/views/user_notifier/send_welcome_email.text.erb
+++ b/app/views/user_notifier/send_welcome_email.text.erb
@@ -5,3 +5,12 @@ Have fun, and thank you for your support!\n
 -Griff,\n
 \n
 Founder of Luckee
+
+Hi there, I see you just signed up for the Luckee beta, welcome!  Our team will be adding new games and features in the coming days, and we would love to get your feedback.  Once you've had some time to check out the site we would really appreciate if you could let us know what you like, as well as anything you would like to see added and improved upon. \n\n
+
+Feel free to email me any time with feedback or suggestions!\n\n
+
+We hope you enjoy Luckee, and thank you for your support.\n\n
+-Griff,\n\n
+
+Founder of Luckee
